<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Trimm Dich</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="statistics_run_speed">Geschwindigkeit</string>
    <string name="statistics_squat_reps">Anzahl Wiederholungen</string>
    <string name="statistics_run_distance">Distanz</string>
    <string name="statistics_headline">Dein Workout in Zahlen</string>
    <string name="statistics_back_button">Zurück zum Hauptmenü</string>

    <!-- NumberPickerFragement Activity -->
    <string name="dialog_route">Länge der Strecke</string>
    <string name="dialog_count">Anzahl der Übungen</string>
    <string name="dialog_exercise">Übung</string>
    <string name="dialog_error">Mindestens eine Übung pro KM</string>

    <!-- Compass Activity -->
    <string name="duration_txt">Dauer</string>
    <string name="distance_txt">zur nächsten Übung</string>
    <string name="speed_txt">Speed (km/h)</string>
    <string name="speed_initial_txt">0,0</string>
    <string name="direction_to_exercise_txt">Richtung zur nächsten Übung</string>
    <string name="direction_img_content_description">Richtungspfeil</string>
    <string name="arrive_at_exercise_btn">Übung erreicht</string>

    <!-- Main Activity -->
    <string name="start_training_btn_txt">Starte Training</string>
    <string name="config_training_txt">Konfigurieren Sie Ihr Training</string>
    <string name="distance_in_km_txt">Strecke in KM</string>
    <string name="exercise_count_txt">Anzahl Übungen</string>
    <string name="exercise_type_txt">Übungen</string>
    <string name="placeholder_txt">-</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="km">KM</string>

    <!-- util -->
    <string name="boder_img">Border</string>
    <string name="generate_route">Generiere Strecke</string>

    <!-- Exercises -->
    <string name="squats">Kniebeugen</string>
    <string name="pullUps">Klimmzüge</string>
    <string name="pushUps">Liegestütze</string>
    <string name="dips">Dips</string>

    <!-- Exercise Activity -->
    <string name="exercise_pushup">Kniebeugen</string>
    <string name="exercise_title">Trimm Dich - Übungen</string>
    <string name="exercise_zero">0</string>
    <string name="exercise_img_content_description">Strichmännchen</string>
    <string name="exercise_start">Beginne Kniebeugen zu machen</string>
    <string name="exercise_pause">Keine Pause einlegen!</string>
    <string name="exercise_end">Fertig!</string>
    <string name="exercise_bt_next">Übungen überspringen</string>
    <string name="exercise_repetition_goal">Ziel: %1$d</string>
    <string name="start_run">Start Run</string>
    <string name="exercise_repetition_goal_pushup">von %1$d Kniebeugen</string>
    <string name="exercise_overview">Übungen: %1$d von %2$d</string>
    <string name="exercise_overview_default">keine Übungen</string>
    <string name="different_route">Andere route</string>

    <!-- Excercise Done Activity -->
    <string name="complete_exercise">Geschafft!</string>
    <string name="almost_complete_exercise">Fast Geschafft!</string>
    <string name="not_complete_exercise">Nicht Geschafft!</string>
    <string name="repetitions_goal">x10</string>

    <!-- Map Result Activit -->
    <string name="show_stats">Statistik anzeigen</string>
    <string name="map_result_activity_title">Zurückgelegte Strecke</string>
    <string name="back_dialog_title">Zurück</string>
    <string name="back_dialog_msg">Willst du zurück zum Hauptmenü und einen neuen Run starten?</string>
    <string name="back_dialog_yes">Ja</string>
    <string name="back_dialog_no">Nein</string>

    <!-- Statistics -->
    <string name="repetitions">Wiederholungen</string>
    <string name="start_new_run">Neuer Run</string>
    <string name="statistics_activity_title">Statistiken</string>
    <string name="compass_activity_title">Navigation</string>
    <string name="excercise_activity_title">Übung</string>
    <string name="runpreview_activity_title">Vorschau</string>
    <string name="main_activity_title">Hauptmenü</string>

</resources>