<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/exercise_overview_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/exercise_overview_default"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/squatsTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="16dp"
        android:text="@string/squats"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/exercise_pic"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@+id/squatsTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/exercise_img_content_description"
        android:src="@drawable/squat_2" />

    <LinearLayout
        android:id="@+id/ex_linear_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/imageView2"
        android:layout_below="@+id/exercise_pic"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <!--
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/squatsTxt"
        android:contentDescription="@string/boder_img"
        android:src="#ccc" />
        -->
        <!--
         <Button
        android:id="@+id/exercise_bt_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:longClickable="true"
        android:onClick="onBtNextClick"
        android:text="@string/exercise_bt_next" />
        -->

        <TextView
            android:id="@+id/exercise_countView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/exercise_zero"
            android:textColor="@color/subtitle_text_color"
            android:textSize="150sp" />

        <TextView
            android:id="@+id/exercise_exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:text="@string/exercise_pushup"
            android:textColor="@color/subtitle_text_color"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/nextExercise"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/boder_img"
        android:src="#ccc" />

    <LinearLayout
        android:id="@+id/nextExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/config_button"
        android:gravity="center"
        android:onClick="onBtNextClick"
        android:paddingBottom="24dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="24dp" >

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginRight="4dp"
            android:cropToPadding="false"
            android:src="@drawable/skip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/exercise_bt_next"
            android:textColor="@color/subtitle_text_color"
            android:textSize="24sp" />
    </LinearLayout>

</RelativeLayout>