<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        class="com.google.android.gms.maps.MapFragment" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:background="#eee"
        android:fillViewport="true" >

        <!-- ********* Running Statistic ******** -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_bottom_shadow"
                android:orientation="horizontal"
                android:padding="4dp" >

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="12dp"
                    android:src="@drawable/running_big" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:src="#ccc" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/distance_statistics_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/placeholder_txt"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/statistics_run_distance"
                        android:textColor="@color/subtitle_text_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:src="#ccc" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/duration_statistics_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/placeholder_txt"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_txt"
                        android:textColor="@color/subtitle_text_color"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- ********* PullUp Statistic ******** -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_bottom_shadow"
                android:orientation="horizontal"
                android:padding="4dp" >

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="6dp"
                    android:src="@drawable/pull_up" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:src="#ccc" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/pullup_reps_statistics_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/placeholder_txt"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repetitions"
                        android:textColor="@color/subtitle_text_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/pullUps"
                    android:textColor="#cdcdcd"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- ********* PushUp Statistic ******** -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_bottom_shadow"
                android:orientation="horizontal"
                android:padding="4dp" >

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/push_up" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:src="#ccc" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/pushup_reps_statistics_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/placeholder_txt"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repetitions"
                        android:textColor="@color/subtitle_text_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/pushUps"
                    android:textColor="#cdcdcd"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- ********* Dips Statistic ******** -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_bottom_shadow"
                android:orientation="horizontal"
                android:padding="4dp" >

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="12dp"
                    android:src="@drawable/dips" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:src="#ccc" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/dips_reps_statistics_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/placeholder_txt"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repetitions"
                        android:textColor="@color/subtitle_text_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/dips"
                    android:textColor="#cdcdcd"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- ********* Squats Statistic ******** -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom_shadow"
                android:orientation="horizontal"
                android:padding="4dp"
                android:paddingBottom="16dp"
                android:paddingTop="16dp" >

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="12dp"
                    android:src="@drawable/squat_2" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/boder_img"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:src="#ccc" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/squats_reps_statistics_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/placeholder_txt"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repetitions"
                        android:textColor="@color/subtitle_text_color"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/squats"
                    android:textColor="#cdcdcd"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>